# duoniche_backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 01bac1711dad_create_user_bot_profiles_table.py  0d252a5f4028_initial.py  1419c0fd5833_user_status.py  1b2c3d4e5f6a_add_source_to_payments.py  1f4b9c7e932a_.py  230a7f896121_fix_exercise_attempts_exercise_answers_.py  317bab7a928c_rejected_by_error_audio_generation_error.py  381d12432191_profile_extend_for_notifier.py  384e45ddaca5_convert_bot_id_column_to_updated_enum.py  422c6cb186e6_initial_migration.py  5c6a1d9eb64a_user_bot_profile_bot_id_enum_value.py  5f8c6a2e4b3d_create_user_reports_table.py  6951b13fb891_initial_migration.py  6b35378d065b_new_fields_for_user.py  73120bbace3d_exercise_persona.py  747b459b6d09_remove_legacy_fields_from_users_table.py  7c2c98f6df06_add_new_enum_exercise_status.py  7e4e7bd50bdf_new_fields_for_user_progress.py  8093d4b4ceb3_bot_id_enum_str.py  81ce30bb3bd4_initial_migration.py  853581da4692_exercise_id_index.py  86c7163721fc_exercise_comments.py  8f70255e4d5c_add_new_enum_to_exercise_status.py  9e3ca364e1ee_add_status_to_weekly_report.py  a3568e9dd341_add_user_telegram_data.py  a9c183771320_change_bot_id_to_string.py  ac0b66d571dd_payments.py  ac728e300f5e_new_fields_for_user_progress.py  ae1a83d4b24c_.py  b60b2e4fe9b1_.py  b9e3695ff304_extend_user_bot_profiles_table.py  c4870005fb1d_profile_extend_for_streak_days.py  cd9c2bc807a9_initial.py  d150c3cd23c2_.py  e4a5f6b7c8d9_add_tag_fields.py  e5a90ee5e1ba_.py  e5e4f4b3c2d1_make_full_report_nullable.py  f1bc5bd4324a_add_date_last_report_user_profile.py  fbdc1d07b330_exercise_updated_at.py  fd4902091779_initial_migration.py  (+2 more)
app/: arq_config.py  celery_producer.py  config.py  logging_config.py  main.py  metrics.py  sentry_sdk.py
app/api/: cache.py  dependencies.py  errors.py
app/core/: config.py  consts.py  enums.py  exercise_templates.py  texts.py  user_settings_templates.py
app/db/: db.py  session.py
app/infrastructure/: redis_client.py
app/llm/: factories.py  llm_base.py  llm_service.py  (+2 more)
docs/: graph.md  project_overview_en.md  project_overview_ru.md
infra/: docker-compose.base.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  prometheus.yml
tests/: conftest.py
(+173 files in other folders)
