[project]
name = "learn-bg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "fastapi[standard]>=0.115.10",
    "langchain>=0.3.19",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "uvicorn>=0.34.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.1.1",
    "sqlalchemy-utils>=0.41.2",
    "langchain-openai>=0.3.8",
    "redis>=5.2.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "prometheus-client>=0.21.1",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff]
lint.select = ["E", "F", "B", "I", "SIM",]
exclude = ["settings.py","migrations", "alembic/*"]
line-length = 79

[tool.mypy]
exclude = ["tests/", "alembic/"]
ignore_missing_imports = true

[tool.pytest]
asyncio_mode = 'auto'
markers = [
    'asyncio: mark test as using asyncio',
]
asyncio_default_fixture_loop_scope = 'function'
